src/test/ui/obsolete-in-place/bad.stderr
error: expected expression, found keyword `in`
  --> $DIR/bad.rs:6:5
   |
LL |     in(foo) { bar };
   |     ^^ expected expression

error: aborting due to previous error

